# filter-faceblur

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: create-release.yaml
docs/: PUBLISHING_PATH  _category_.json  overview.md
filter_faceblur/: filter.py
filter_faceblur/model/: model.py  shared.py
filter_faceblur/model/blurrers/: box_blur.py  median_blur.py
filter_faceblur/model/detectors/: base_detector.py  dnn_detector.py  haar_detector.py  yunet_detector.py
scripts/: filter_usage.py  model_usage.py
tests/: test_blurrers.py  test_detectors.py  test_face_blur_registry.py  test_filter_faceblur.py  test_integration_config_normalization.py  test_process_frame.py  test_smoke_simple.py  test_verify_sha256.py  test_yunet_autodownload.py  test_yunet_detector.py
